# android_external_Valor

./: .gitignore  50-valord.sh  Android.mk  BoardConfig.mk  Buildfile  CMakeLists.txt  Droidbuild.sh  Droidbuild.sh.disabled  README.md  valord-custom.rc  valord.rc
.github/workflows/: cmake-single-platform.yml  codeql.yml  docker-publish-libvalor.yml
dbgen/: .gitignore  Android.bp  Android.mk  CMakeLists.txt  Dockerfile
dbgen/src/: arguments.c  arguments.h  array.c  config.h  dbgen.c  hashtable.c  message.c  message.h
dbgen/src/crc32/: crc32.c
dbgen/src/db/: db.h
libvalor/: .gitignore  Android.bp  Android.mk  CMakeLists.txt  Dockerfile  arm64.cmake
libvalor/include/valor/: array.h  checksum.h  config.h  ed_tree.h  hashset.h  hashtable.h
libvalor/include/valor/crc32/: crc32.h
libvalor/include/valor/db/: db.h
libvalor/src/: array.c  checksum.c  ed_tree.c  hashset.c  hashtable.c
libvalor/src/crc32/: crc32.c  crc_poly.c
libvalor/src/db/: db.c
libvalor/tests/: test_hashset.c  test_stringset.c
patches/: 001-sepolicy.patch
sepolicy/: file_contexts  valord.te
sepolicy/private/: file_contexts  valord.te
src/dbgen/: arguments.c  arguments.h  array.c  array.h  checksum.c  checksum.h  config.h  dbgen.c  hashtable.c  hashtable.h  message.c  message.h
src/dbgen/crc32/: crc32.c  crc32.h
src/dbgen/db/: db.c  db.h
src/valord/: aassert.c  aassert.h  checksum.c  checksum.h  config.h  process.c  process.h  util.c  util.h  valor.c
src/valord/db/: db.c  db.h
valord/: Android.mk  CMakeLists.txt  config.h  process.c  util.c
valord/db/: db.c
valord/sepolicy/: valord.te
valord/src/: aassert.c  aassert.h  log.c  log.h  process.c  process.h  util.c  util.h  valor.c
